fix 'welcome' link contrast on home pg
I think this can just use regular link styles, the accent color is too light for the bg

--- a/assets/_scss/_homepage.scss
+++ b/assets/_scss/_homepage.scss
@@ -133,16 +133,3 @@
     height: 550px;
   }
 }
-
-// "Welcome to..." section of the home page
-.welcome a {
-  @include link-styles;
-  color: $accent !important;
-
-  &:hover,
-  &:focus,
-  &:active {
-    @include link-styles-states;
-    color: $primary !important;
-  }
-}
